RNN draft: trying out the model

--- a/RNN-draft.ipynb
+++ b/RNN-draft.ipynb
@@ -5,6 +5,7 @@
    "id": "4793220e-c870-44bb-b0c6-ab718277123b",
    "metadata": {},
    "source": [
+    "## RNN Model\n",
     "- What is the input shape going to be?\n",
     "\n",
     "- Target categories we're going to have (6):\n",
@@ -20,7 +21,9 @@
     "- How many hidden layers / dense layers?\n",
     "\n",
     "- Please Check: activation, loss, optimizer?\n",
-    "- Fine-tune hyperparameters: epochs, learning_rate"
+    "- Fine-tune hyperparameters: epochs, learning_rate\n",
+    "\n",
+    "### how can we ensure that the bq file corresponds to the right metadata row name? https://g.co/gemini/share/4af73bcc7f70"
    ]
   },
   {
@@ -334,20 +337,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 148,
    "id": "59d0c2d0-e1c1-45f6-8b85-f6847dd3aa91",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "X_angles_train = angles_list[:70]\n",
-    "X_angles_test = angles_list[70:]"
+    "X_angles = np.array(angles_list)\n",
+    "\n",
+    "# Now, X_angles is a single NumPy array with shape (100, 10, 12000)\n",
+    "# (assuming 100 iterations, 10 features, 12000 maxlen)\n",
+    "\n",
+    "X_angles_train = X_angles[:70]\n",
+    "X_angles_test = X_angles[70:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 157,
    "id": "dbdf977a-846b-409d-8dcd-0c82b6649790",
    "metadata": {
     "tags": []
@@ -355,13 +363,20 @@
    "outputs": [],
    "source": [
     "X_meta = metadata_df[['age', 'Height', 'Weight', 'Gender']]\n",
-    "X_meta_train = X_meta.loc[:69, :]\n",
-    "X_meta_test = X_meta.loc[69:, :]"
+    "#X_meta_train = X_meta.loc[:69, :]\n",
+    "#X_meta_test = X_meta.loc[69:, :]\n",
+    "\n",
+    "# We only processed the first 100 BQ names for angles_list,\n",
+    "# so we should only use the first 100 corresponding metadata rows.\n",
+    "X_meta_subset = X_meta.iloc[:100, :] # Get the first 100 rows of metadata\n",
+    "\n",
+    "X_meta_train = X_meta_subset.iloc[:70, :] # Samples 0-69 from the subset\n",
+    "X_meta_test = X_meta_subset.iloc[70:, :] # Samples 70-99 from the subset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 158,
    "id": "6d8f7a12-f3dd-4e70-a150-757a78c1d325",
    "metadata": {
     "tags": []
@@ -377,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 159,
    "id": "dfccee62-d769-443b-9f5a-87e72bca98db",
    "metadata": {
     "tags": []
@@ -391,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 160,
    "id": "c25ffcec-e7d2-4f8f-ab47-1852a766eb44",
    "metadata": {
     "tags": []
@@ -404,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 161,
    "id": "203e4631-d8f6-4247-b450-071694972486",
    "metadata": {
     "tags": []
@@ -417,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 162,
    "id": "c75f9c20-82b1-4cce-9035-0dc9056185c2",
    "metadata": {
     "tags": []
@@ -429,7 +444,7 @@
        "(30, 6)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 163,
    "id": "12a1d82d-8bc3-4920-b21a-c35884d1c0b3",
    "metadata": {
     "tags": []
@@ -456,7 +471,7 @@
        "70"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,86 +482,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "60efb11c-25de-4326-adbc-f826defd13f5",
+   "execution_count": 164,
+   "id": "9bf52ddc-7171-4429-bb98-1d573132cff8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Data cardinality is ambiguous. Make sure all arrays contain the same number of samples.'x' sizes: 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 70\n'y' sizes: 70\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[138], line 40\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# 3. Fit\u001b[39;00m\n\u001b[1;32m     35\u001b[0m early_stop \u001b[38;5;241m=\u001b[39m EarlyStopping(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     36\u001b[0m                            patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m,\n\u001b[1;32m     37\u001b[0m                            min_delta\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.001\u001b[39m,\n\u001b[1;32m     38\u001b[0m                            restore_best_weights\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 40\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mX_angles_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_meta_train_preproc\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     41\u001b[0m \u001b[43m          \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m          \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m          \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mX_angles_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_meta_test_preproc\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[43m          \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[43m          \u001b[49m\u001b[43mcallbacks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mearly_stop\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;66;03m# 4. Predict\u001b[39;00m\n\u001b[1;32m     49\u001b[0m model\u001b[38;5;241m.\u001b[39mpredict(X_test, y_test)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/keras/src/utils/traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/keras/src/trainers/data_adapters/data_adapter_utils.py:115\u001b[0m, in \u001b[0;36mcheck_data_cardinality\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    111\u001b[0m     sizes \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\n\u001b[1;32m    112\u001b[0m         \u001b[38;5;28mstr\u001b[39m(i\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m tree\u001b[38;5;241m.\u001b[39mflatten(single_data)\n\u001b[1;32m    113\u001b[0m     )\n\u001b[1;32m    114\u001b[0m     msg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabel\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m sizes: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msizes\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 115\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n",
-      "\u001b[0;31mValueError\u001b[0m: Data cardinality is ambiguous. Make sure all arrays contain the same number of samples.'x' sizes: 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 70\n'y' sizes: 70\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of X_angles_train: <class 'numpy.ndarray'>\n",
+      "Shape of X_angles_train: (70, 10, 12000)\n",
+      "Type of X_meta_train_preproc: <class 'numpy.ndarray'>\n",
+      "Shape of X_meta_train_preproc: (70, 4)\n",
+      "Type of y_train: <class 'numpy.ndarray'>\n",
+      "Shape of y_train: (70, 6)\n",
+      "Epoch 1/50\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 870ms/step - accuracy: 0.2009 - loss: 1.7958 - val_accuracy: 0.1333 - val_loss: 1.8012\n",
+      "Epoch 2/50\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 462ms/step - accuracy: 0.2354 - loss: 1.7565 - val_accuracy: 0.1333 - val_loss: 1.8055\n",
+      "Epoch 3/50\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 454ms/step - accuracy: 0.2366 - loss: 1.7390 - val_accuracy: 0.2667 - val_loss: 1.8110\n",
+      "Epoch 4/50\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 460ms/step - accuracy: 0.3472 - loss: 1.6905 - val_accuracy: 0.2333 - val_loss: 1.8527\n",
+      "Epoch 5/50\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 444ms/step - accuracy: 0.3440 - loss: 1.6451 - val_accuracy: 0.2667 - val_loss: 1.8990\n",
+      "Epoch 6/50\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 438ms/step - accuracy: 0.3316 - loss: 1.6246 - val_accuracy: 0.2667 - val_loss: 1.9010\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x7f9a80ab5090>"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# DONT RUN\n",
-    "\n",
-    "# 0. Imports\n",
-    "import numpy as np\n",
-    "from tensorflow.keras import Sequential, Input, layers\n",
-    "from tensorflow.keras.layers import Input, LSTM, Dense, Dropout, Concatenate\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "\n",
-    "\n",
-    "### We need to pad the inputs, (from the RNN lecture), \n",
-    "#     from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "#     X_pad = pad_sequences(X_token, dtype='float32', padding='pre')\n",
-    "\n",
-    "\n",
-    "# 1. RNN Architecture\n",
-    "model = Sequential()\n",
-    "model.add(Input(shape=(10,12000))) #Input shape? # Or .. (1832, 4000, n_meta_features)? (does it need # of angles)\n",
-    "\n",
-    "model.add(layers.LSTM(units=256, activation='tanh', return_sequences=True)) #Units all okay #return_sequences=True to bring to the next layer\n",
-    "model.add(layers.LSTM(units=128, activation='tanh', return_sequences=True))\n",
-    "model.add(layers.LSTM(units=64, activation='tanh', return_sequences=False)) #More hidden layers?\n",
-    "          \n",
-    "model.add(layers.Dense(64, activation='relu')) # leos: [4000, n_features] (???)\n",
-    "model.add(layers.Dense(6, activation='softmax')) #More dense layers?\n",
-    "\n",
-    "\n",
-    "# 2. Compilation\n",
-    "model.compile(loss='categorical_crossentropy',\n",
-    "              optimizer=Adam(learning_rate=0.001),\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "              \n",
-    "# 3. Fit\n",
-    "early_stop = EarlyStopping(monitor='val_loss',\n",
-    "                           patience=0,\n",
-    "                           min_delta=0.001,\n",
-    "                           restore_best_weights=True)\n",
-    "\n",
-    "model.fit([X_angles_train, X_meta_train_preproc], y_train, \n",
-    "          epochs=50, \n",
-    "          batch_size=32, \n",
-    "          validation_data = ([X_angles_test, X_meta_test_preproc], y_test),\n",
-    "          verbose=1,\n",
-    "          callbacks=[early_stop])\n",
-    "\n",
-    "\n",
-    "# 4. Predict\n",
-    "model.predict(X_test, y_test)\n",
-    "          \n",
-    "\n",
-    "# 5. Evaluation\n",
-    "model.evaluate(X_test, y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bf52ddc-7171-4429-bb98-1d573132cff8",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#### Imports ####\n",
     "import numpy as np\n",
@@ -554,7 +528,7 @@
     "from tensorflow.keras.layers import Input, LSTM, Dense, Dropout, Concatenate\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "\n",
+    "from tensorflow.keras.models import Model\n",
     "\n",
     "#### 1. Architecture ####\n",
     "\n",
@@ -570,7 +544,7 @@
     "x = layers.Dense(64, activation='relu')(x)  # flatten & process time branch\n",
     "\n",
     "    # (2.) Metadata Input #\n",
-    "        # Assume: shape=(n_meta_features,)\n",
+    "# Assume: shape=(n_meta_features,)\n",
     "meta_input = Input(shape=(4,), name='meta_input') #do we need to add number of frames, or number of runners ?\n",
     "\n",
     "y = layers.Dense(32, activation='relu')(meta_input)\n",
@@ -605,24 +579,52 @@
     "                           patience=5,\n",
     "                           # min_delta=0.001,(??)\n",
     "                           restore_best_weights=True)\n",
+    "##checking sizes\n",
+    "print(f\"Type of X_angles_train: {type(X_angles_train)}\")\n",
+    "print(f\"Shape of X_angles_train: {X_angles_train.shape}\")\n",
+    "print(f\"Type of X_meta_train_preproc: {type(X_meta_train_preproc)}\")\n",
+    "print(f\"Shape of X_meta_train_preproc: {X_meta_train_preproc.shape}\")\n",
+    "print(f\"Type of y_train: {type(y_train)}\")\n",
+    "print(f\"Shape of y_train: {y_train.shape}\")\n",
     "\n",
-    "model.fit([X_time, X_meta],\n",
-    "          y_train,\n",
-    "          epochs=50,\n",
+    "model.fit([X_angles_train, X_meta_train_preproc], y_train, \n",
+    "          epochs=50, \n",
     "          batch_size=32, \n",
-    "          validation_split=0.2, \n",
+    "          validation_data = ([X_angles_test, X_meta_test_preproc], y_test),\n",
     "          verbose=1,\n",
     "          callbacks=[early_stop])\n",
     "\n",
     "\n",
     "\n",
-    "\n",
     "#### 4. Predict ####\n",
-    "model.predict(??, ??)\n",
+    "#model.predict(??, ??)\n",
     "          \n",
     "\n",
     "# 5. Evaluation\n",
-    "model.evaluate(??, ??)\n"
+    "#model.evaluate(??, ??)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "0aa4ff28-e9d1-4f9e-b8cc-f9092b6eb3ef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_angles_train)"
    ]
   }
  ],
