changes to test files

--- a/data_cleaning/paula_inj_joint_cleaning.ipynb
+++ b/data_cleaning/paula_inj_joint_cleaning.ipynb
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "42b791c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading in the run_data_csv\n",
-    "data = pd.read_csv('../raw_data/run_data_meta.csv')\n",
+    "data = pd.read_csv('../data/meta/run_data_meta.csv')\n",
     "pd.reset_option('display.max_rows')\n"
    ]
   },
